--- a/CGJApp/CGJApp/CGJApp.vcxproj
+++ b/CGJApp/CGJApp/CGJApp.vcxproj
@@ -161,8 +161,10 @@
     <ClCompile Include="avtFreeType.cpp" />
     <ClCompile Include="AVTmathLib.cpp" />
     <ClCompile Include="basic_geometry.cpp" />
-    <ClCompile Include="lightDemo.cpp" />
+    <ClCompile Include="GameObjects\Table.cpp" />
+    <ClCompile Include="MainFile.cpp" />
     <ClCompile Include="Texture_Loader.cpp" />
+    <ClCompile Include="TimeUtil.cpp" />
     <ClCompile Include="vsShaderLib.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -170,8 +172,11 @@
     <ClInclude Include="AVTmathLib.h" />
     <ClInclude Include="cube.h" />
     <ClInclude Include="ft2build.h" />
+    <ClInclude Include="GameObjects\GameObject3D.h" />
+    <ClInclude Include="GameObjects\Table.h" />
     <ClInclude Include="geometry.h" />
     <ClInclude Include="Texture_Loader.h" />
+    <ClInclude Include="TimeUtil.h" />
     <ClInclude Include="VertexAttrDef.h" />
     <ClInclude Include="vsShaderLib.h" />
   </ItemGroup>
