--- a/CGJApp/CGJApp/CGJApp.vcxproj
+++ b/CGJApp/CGJApp/CGJApp.vcxproj
@@ -161,7 +161,16 @@
     <ClCompile Include="avtFreeType.cpp" />
     <ClCompile Include="AVTmathLib.cpp" />
     <ClCompile Include="basic_geometry.cpp" />
+    <ClCompile Include="Camera\Camera.cpp" />
+    <ClCompile Include="Camera\OrthographicCamera.cpp" />
+    <ClCompile Include="Camera\PerspectiveCamera.cpp" />
+    <ClCompile Include="GameObjects\Cheerios.cpp" />
+    <ClCompile Include="GameObjects\Orange.cpp" />
     <ClCompile Include="GameObjects\Table.cpp" />
+    <ClCompile Include="Lights\DirectionalLight.cpp" />
+    <ClCompile Include="Lights\Light.cpp" />
+    <ClCompile Include="Lights\PointLight.cpp" />
+    <ClCompile Include="Lights\SpotLight.cpp" />
     <ClCompile Include="MainFile.cpp" />
     <ClCompile Include="Texture_Loader.cpp" />
     <ClCompile Include="TimeUtil.cpp" />
@@ -170,11 +179,20 @@
   <ItemGroup>
     <ClInclude Include="avtFreeType.h" />
     <ClInclude Include="AVTmathLib.h" />
+    <ClInclude Include="Camera\Camera.h" />
+    <ClInclude Include="Camera\OrthographicCamera.h" />
+    <ClInclude Include="Camera\PerspectiveCamera.h" />
     <ClInclude Include="cube.h" />
     <ClInclude Include="ft2build.h" />
+    <ClInclude Include="GameObjects\Cheerios.h" />
     <ClInclude Include="GameObjects\GameObject3D.h" />
+    <ClInclude Include="GameObjects\Orange.h" />
     <ClInclude Include="GameObjects\Table.h" />
     <ClInclude Include="geometry.h" />
+    <ClInclude Include="Lights\DirectionalLight.h" />
+    <ClInclude Include="Lights\Light.h" />
+    <ClInclude Include="Lights\PointLight.h" />
+    <ClInclude Include="Lights\SpotLight.h" />
     <ClInclude Include="Texture_Loader.h" />
     <ClInclude Include="TimeUtil.h" />
     <ClInclude Include="VertexAttrDef.h" />
