Catch up with everyone

--- a/CGJApp/CGJApp/CGJApp.vcxproj
+++ b/CGJApp/CGJApp/CGJApp.vcxproj
@@ -207,6 +207,9 @@
     <None Include="shaders\text.frag" />
     <None Include="shaders\text.vert" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="stone.tga" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
