--- a/CGJApp/CGJApp/CGJApp.vcxproj
+++ b/CGJApp/CGJApp/CGJApp.vcxproj
@@ -164,6 +164,7 @@
     <ClCompile Include="Camera\Camera.cpp" />
     <ClCompile Include="Camera\OrthographicCamera.cpp" />
     <ClCompile Include="Camera\PerspectiveCamera.cpp" />
+    <ClCompile Include="GameHudManager.cpp" />
     <ClCompile Include="GameObjects\Car.cpp" />
     <ClCompile Include="GameObjects\Cheerios.cpp" />
     <ClCompile Include="GameObjects\Orange.cpp" />
@@ -184,7 +185,9 @@
     <ClInclude Include="Camera\OrthographicCamera.h" />
     <ClInclude Include="Camera\PerspectiveCamera.h" />
     <ClInclude Include="cube.h" />
+    <ClInclude Include="flare.h" />
     <ClInclude Include="ft2build.h" />
+    <ClInclude Include="GameHudManager.h" />
     <ClInclude Include="GameObjects\Car.h" />
     <ClInclude Include="GameObjects\Cheerios.h" />
     <ClInclude Include="GameObjects\GameObject3D.h" />
