--- a/CGJApp/CGJApp/CGJApp.vcxproj.filters
+++ b/CGJApp/CGJApp/CGJApp.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClCompile Include="GameObjects\Car.cpp">
       <Filter>GameObjects</Filter>
     </ClCompile>
+    <ClCompile Include="GameHudManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AVTmathLib.h">
@@ -142,6 +145,12 @@
     </ClInclude>
     <ClInclude Include="GameObjects\Car.h">
       <Filter>GameObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="GameHudManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="flare.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
